# einargs-blog

./: .firebaserc  .gitignore  Cargo.toml  LEPTOS_README.md  Makefile.toml  NOTES.md  README.md  TODO.md  firebase.json  flake.nix  index.html  package-lock.json  package.json  rust-analyzer.json  rust-toolchain.toml  setup-docs.sh  tailwind.config.js  test-local.sh
app/: Cargo.toml
app/src/: app.rs  lib.rs
app/src/components/: footer.rs  header.rs  mod.rs  social_links.rs
app/src/data/: post.rs
app/src/pages/: about.rs  blog_list.rs  blog_post.rs  mod.rs  not_found.rs
docs/: 404.html  index.html
docs/blog/: index.html
docs/blog/test/: index.html
docs/pkg/: leptos_start.css  leptos_start.js
frontend/: Cargo.toml
frontend/src/: lib.rs
generator/src/: main.rs
post_lib/: Cargo.toml
post_lib/src/: lib.rs
post_macros/: Cargo.toml
post_macros/src/: lib.rs
posts/: blog.md  test.md
src/: app.rs  lib.rs  main.rs  projects.rs
src/routes/: blog.rs  projects.rs
src/server/: posts.rs
style/: output.css
