[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
cinnog.workspace = true

leptos.workspace = true
leptos_meta.workspace = true
tracing.workspace = true
bevy_ecs.workspace = true

leptos_router = { version = "0.6", features = ["nightly"] }
chrono = "0.4.34"

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
